Upload clojask benchmark code

--- a/benchmark/dask-benchmark.ipynb
+++ b/benchmark/dask-benchmark.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "#ddf = dd.from_pandas(df, npartitions=10)\n",
     "\n",
-    "# =================== Change this part to test speed ====================== #\n",
+    "# =================== Change this part to test time taken ====================== #\n",
     "\n",
     "# element-wise operations\n",
     "df['new_col'] = df['datacqtr'] + 20 # Compustat\n",
